// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, disabled: true, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(min-width:480px) {
}

@media(min-width:760px) {
  :host {
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  }
}

@media(min-width:1000px) {
}

@media(min-width:1300px) {
  :host {
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
  }
}

@media(min-width:1760px) {
}

.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted-soft);
  color: var(--p-color-contrast-low);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px);
  gap: 0;
  border-color: var(--p-color-frosted-soft);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: 0;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  }
}

@media(min-width:760px) {
  .root {
    padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px);
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}

@media(min-width:1000px) {
  .root {
    padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  }
}

@media(min-width:1300px) {
  .root {
    padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px);
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}

@media(min-width:1760px) {
  .root {
    padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 3`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 4`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: false 5`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: false and theme: true 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 0.64285714;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: false, loading: true and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted-soft);
  color: var(--p-color-contrast-low);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  border-color: var(--p-color-frosted-soft);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
}
.spinner {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  pointer-events: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, disabled: true, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted-soft);
  color: var(--p-color-contrast-low);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  border-color: var(--p-color-frosted-soft);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-frosted-soft);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-frosted-soft);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 3`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-frosted-soft);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: false 4`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-frosted-soft);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, disabled: false, loading: false and theme: true 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 0.64285714;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  margin-inline-start: calc(-1 * (11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px));
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover {
    background-color: var(--p-color-frosted-soft);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: none, iconSource: , variant: primary, hideLabel: false, disabled: true, loading: true and theme: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --p-internal-button-scaling: 1;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  border-radius: inherit;
  transform: translate3d(0,0,0);
  background-color: var(--p-color-frosted-soft);
  color: var(--p-color-contrast-low);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  padding: calc(28px * (var(--p-internal-button-scaling) - 0.64285714) + 6px) calc(33.6px * (var(--p-internal-button-scaling) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--p-internal-button-scaling) - 0.64285714) + 4px);
  border-color: var(--p-color-frosted-soft);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
}
.spinner {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  pointer-events: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
